fixing background fixed position on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -224,9 +224,11 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  content: "";
+  display: block;
   width: 100vw;
   height: 100vh;
-  z-index: -3;
+  z-index: -10;
   filter: brightness(40%);
 }
 
